{
  "version": 4,
  "terraform_version": "0.12.9",
  "serial": 8,
  "lineage": "128c7c45-4329-6df6-f0d0-de7adb32e39a",
  "resources": [
    {
      "module": "module.udr-table",
      "mode": "managed",
      "type": "azurerm_route",
      "name": "routes",
      "each": "list",
      "provider": "provider.azurerm",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.5.2.0/24",
            "id": "/subscriptions/5b98ba7c-c3f7-43ec-ac20-195d8109fe2b/resourceGroups/udr-rg/providers/Microsoft.Network/routeTables/udr-test-table/routes/route1",
            "name": "route1",
            "next_hop_in_ip_address": "",
            "next_hop_type": "VnetLocal",
            "resource_group_name": "udr-rg",
            "route_table_name": "udr-test-table"
          },
          "depends_on": [
            "azurerm_route_table.routeTable"
          ]
        }
      ]
    },
    {
      "module": "module.udr-table",
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "routeTable",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/5b98ba7c-c3f7-43ec-ac20-195d8109fe2b/resourceGroups/udr-rg/providers/Microsoft.Network/routeTables/udr-test-table",
            "location": "southeastasia",
            "name": "udr-test-table",
            "resource_group_name": "udr-rg",
            "route": [],
            "subnets": [],
            "tags": {}
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "udr-subnet1",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.5.1.0/24",
            "id": "/subscriptions/5b98ba7c-c3f7-43ec-ac20-195d8109fe2b/resourceGroups/udr-rg/providers/Microsoft.Network/virtualNetworks/udr-vnet/subnets/udr-subnet1",
            "name": "udr-subnet1",
            "resource_group_name": "udr-rg",
            "virtual_network_name": "udr-vnet"
          },
          "depends_on": [
            "azurerm_resource_group.udr-rg",
            "azurerm_virtual_network.udr-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "udr-subnet2",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.5.2.0/24",
            "id": "/subscriptions/5b98ba7c-c3f7-43ec-ac20-195d8109fe2b/resourceGroups/udr-rg/providers/Microsoft.Network/virtualNetworks/udr-vnet/subnets/udr-subnet2",
            "name": "udr-subnet2",
            "resource_group_name": "udr-rg",
            "virtual_network_name": "udr-vnet"
          },
          "depends_on": [
            "azurerm_resource_group.udr-rg",
            "azurerm_virtual_network.udr-vnet"
          ]
        }
      ]
    },
    {
      "module": "module.udr-table",
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "routeTableAssociation",
      "each": "list",
      "provider": "provider.azurerm",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/5b98ba7c-c3f7-43ec-ac20-195d8109fe2b/resourceGroups/udr-rg/providers/Microsoft.Network/virtualNetworks/udr-vnet/subnets/udr-subnet2",
            "route_table_id": "/subscriptions/5b98ba7c-c3f7-43ec-ac20-195d8109fe2b/resourceGroups/udr-rg/providers/Microsoft.Network/routeTables/udr-test-table",
            "subnet_id": "/subscriptions/5b98ba7c-c3f7-43ec-ac20-195d8109fe2b/resourceGroups/udr-rg/providers/Microsoft.Network/virtualNetworks/udr-vnet/subnets/udr-subnet2"
          },
          "depends_on": [
            "azurerm_route_table.routeTable"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "udr-vnet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.5.0.0/16"
            ],
            "id": "/subscriptions/5b98ba7c-c3f7-43ec-ac20-195d8109fe2b/resourceGroups/udr-rg/providers/Microsoft.Network/virtualNetworks/udr-vnet",
            "location": "southeastasia",
            "name": "udr-vnet",
            "resource_group_name": "udr-rg"
          },
          "depends_on": [
            "azurerm_resource_group.udr-rg"
          ]
        }
      ]
    }
  ]
}